pulling in changes added in https://github.com/hmcts/sscs-bulk-scan/pull/1552